spacing fix

--- a/event-managers/css/style.css
+++ b/event-managers/css/style.css
@@ -102,6 +102,10 @@
     min-height: unset;
 }
 
+.section .wrapper {
+    margin-top: 40px;
+}
+
 .section.grey .wrapper {
     margin-top: 20px;
 }
